--- a/src/com/rdayala/enums/enums.html
+++ b/src/com/rdayala/enums/enums.html
@@ -226,6 +226,106 @@ JVM loads enum when it uses it first time.
 <h4>Best practice : use enums instead of int constants.</h4>
 
 <br>
+
+
+<hr>
+
+<br>
+
+<h4>Code Examples :</h4>
+
+<br>
+
+<p>
+<a href="https://docs.oracle.com/javase/8/docs/api/java/lang/Enum.html" title="https://docs.oracle.com/javase/8/docs/api/java/lang/Enum.html" class="https">https://docs.oracle.com/javase/8/docs/api/java/lang/Enum.html</a>
+</p>
+
+<p>
+Every enum is essentially a class which extends <tt>java.lang.Enum </tt>and implements <tt>Comparable</tt> interface.
+</p>
+
+<p>
+<img src="./enums_files/pasted_image007.png">
+</p>
+
+<p>
+enum constructor :
+</p>
+
+<p>
+<img src="./enums_files/pasted_image008.png">
+</p>
+
+<p>
+Since Enum also implements Comparable internface, it implements, compareTo method, so that enums can be compared.
+</p>
+
+<p>
+<img src="./enums_files/pasted_image009.png">
+</p>
+
+<p>
+<tt>ordinal()</tt> is the final method, cannot be overridden.
+</p>
+
+<p>
+<img src="./enums_files/pasted_image010.png" width="1280">
+</p>
+
+<p>
+<tt>toString()</tt> method
+</p>
+
+<p>
+<img src="./enums_files/pasted_image011.png" width="1280">
+</p>
+
+<p>
+Enum types are singleton. Clone on enum type is not supported to preserve enum objects singleton status.
+</p>
+
+<p>
+Code Example :
+</p>
+
+<div class="zim-object">
+<pre><code class="java">package com.rdayala.enums;
+
+public enum BookGenre {
+	BIOGRAPHY,
+	HORROR;  // if we want to add anything after constants, then we need to end constants with a semicolon.
+	
+	public static void main(String[] args) {
+		for(BookGenre bookGenre : BookGenre.values()) {
+			System.out.println("\nName : " + bookGenre);  // uses toString() method ; toString() internally uses name() method unless overridden.
+			System.out.println(", name() : " + bookGenre.name());
+			System.out.println(", Ordinal : " + bookGenre.ordinal());
+			System.out.println(", Declaring class : " + bookGenre.getDeclaringClass());
+			System.out.println(", compareTo(HORROR) : " + bookGenre.compareTo(BookGenre.HORROR));
+			System.out.println(", equals(HORROR) : " + bookGenre.equals(BookGenre.HORROR));
+		}
+	}
+}
+</code></pre>
+</div>
+
+<br>
+<br>
+<br>
+
+
+<hr>
+
+<br>
+
+<h4>Enums with State and Behavior</h4>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -256,6 +356,27 @@ JVM loads enum when it uses it first time.
 
 
 			<tr><td><a href='./enums_files/pasted_image004.png'>pasted_image004.png</a></td><td>&nbsp;</td><td>96.1kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image005.png'>pasted_image005.png</a></td><td>&nbsp;</td><td>13.3kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image006.png'>pasted_image006.png</a></td><td>&nbsp;</td><td>17.3kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image007.png'>pasted_image007.png</a></td><td>&nbsp;</td><td>17.6kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image008.png'>pasted_image008.png</a></td><td>&nbsp;</td><td>9.25kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image009.png'>pasted_image009.png</a></td><td>&nbsp;</td><td>5.70kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image010.png'>pasted_image010.png</a></td><td>&nbsp;</td><td>19.9kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image011.png'>pasted_image011.png</a></td><td>&nbsp;</td><td>22.0kb</td></tr>
 
 			</table>
 	</div>
