--- a/src/com/rdayala/enums/enums.html
+++ b/src/com/rdayala/enums/enums.html
@@ -321,6 +321,80 @@ public enum BookGenre {
 <h4>Enums with State and Behavior</h4>
 
 <br>
+
+<p>
+Enums can have —
+</p>
+
+<p>
+<ol type="1" start="1">
+<li>instance variables to represent state</li>
+<li>can have methods to represent behavior</li>
+<li>they can have <tt>constructors </tt>with private access
+<ol type="a" start="1">
+<li>no public or protected modifier for enum constructors.</li>
+<li>if no access modifier is specified, it is by default private.</li>
+</ol></li>
+</ol>
+</p>
+
+<p>
+Enum is non instantiable, non extendable.
+</p>
+
+<p>
+NOTE — enum constants must be the FIRST block of code in enum type declaration.
+</p>
+
+<p>
+<img src="./enums_files/pasted_image013.png"><br>
+enums can define <b>static</b> members explicitly. Like, we can have a static main() method inside enum type.
+</p>
+
+<p>
+Example :
+</p>
+
+<div class="zim-object">
+<pre><code class="java">package com.rdayala.enums;
+
+// this enum type defines state and behavior
+
+public enum BookGener {
+	BIOGRAPHY(12),
+	HORROR(15);
+	
+	private BookGener(int minAgeToRead) {
+		this.minAgeToRead = minAgeToRead;
+	}
+	
+	// state of enum
+	private int minAgeToRead;
+	public int getMinAgeToRead() {
+		return minAgeToRead;
+	}
+	
+	public static void main(String[] args) {
+		for(BookGener bookGenre : BookGener.values()) {
+			System.out.println("\nName : " + bookGenre);  // uses toString() method ; toString() internally uses name() method unless overridden.
+			System.out.println(", name() : " + bookGenre.name());
+			System.out.println(", Ordinal : " + bookGenre.ordinal());
+			System.out.println(", Declaring class : " + bookGenre.getDeclaringClass());
+			System.out.println(", compareTo(HORROR) : " + bookGenre.compareTo(BookGener.HORROR));
+			System.out.println(", equals(HORROR) : " + bookGenre.equals(BookGener.HORROR));
+			System.out.println(", minAgeToRead : " + bookGenre.getMinAgeToRead()); // getting state of enum object
+		}
+	}
+}
+</code></pre>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -377,6 +451,12 @@ public enum BookGenre {
 
 
 			<tr><td><a href='./enums_files/pasted_image011.png'>pasted_image011.png</a></td><td>&nbsp;</td><td>22.0kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image012.png'>pasted_image012.png</a></td><td>&nbsp;</td><td>122kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image013.png'>pasted_image013.png</a></td><td>&nbsp;</td><td>134kb</td></tr>
 
 			</table>
 	</div>
