nested enum concept updated

--- a/src/com/rdayala/enums/enums.html
+++ b/src/com/rdayala/enums/enums.html
@@ -391,6 +391,92 @@ public enum BookGener {
 
 <br>
 <br>
+
+
+<hr>
+
+<br>
+
+<h4>Nested Enums</h4>
+
+<br>
+
+<p>
+if an Enum has a specific context, not of generic type, then you can make it part of another class or interface, then it is nested.
+</p>
+
+<p>
+nested enums are <tt>static nested class, </tt>because enum can have static members.
+</p>
+
+<p>
+<img src="./enums_files/pasted_image015.png">
+</p>
+
+<p>
+What is the difference between static member class and nested enum ? nested enum by default static nested class.
+</p>
+
+<p>
+<img src="./enums_files/pasted_image016.png"><br>
+NOTE - enums can be further nested inside static member classes, but not in inner classes.
+</p>
+
+<div class="zim-object">
+<pre><code class="java">package com.rdayala.enums;
+
+// this is an example of nested enum
+
+public class Book {
+
+	// nested enum are implicitly static
+	public enum BookGenere {
+		BIOGRAPHY(12),
+		HORROR(15);
+		
+		private BookGenere(int minAgeToRead) {
+			this.minAgeToRead = minAgeToRead;
+		}
+		
+		// state of enum
+		private int minAgeToRead;
+		public int getMinAgeToRead() {
+			return minAgeToRead;
+		}		
+	}
+	
+	public static void main(String[] args) {
+		for(Book.BookGenere bookGenre : Book.BookGenere.values()) {
+			System.out.println("\nName : " + bookGenre);  // uses toString() method ; toString() internally uses name() method unless overridden.
+			System.out.println(", name() : " + bookGenre.name());
+			System.out.println(", Ordinal : " + bookGenre.ordinal());
+			System.out.println(", Declaring class : " + bookGenre.getDeclaringClass());
+			System.out.println(", compareTo(HORROR) : " + bookGenre.compareTo(Book.BookGenere.HORROR));
+			System.out.println(", equals(HORROR) : " + bookGenre.equals(Book.BookGenere.HORROR));
+			System.out.println(", minAgeToRead : " + bookGenre.getMinAgeToRead()); // getting state of enum object
+		}
+	}
+	
+}
+</code></pre>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -457,6 +543,15 @@ public enum BookGener {
 
 
 			<tr><td><a href='./enums_files/pasted_image013.png'>pasted_image013.png</a></td><td>&nbsp;</td><td>134kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image014.png'>pasted_image014.png</a></td><td>&nbsp;</td><td>204kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image015.png'>pasted_image015.png</a></td><td>&nbsp;</td><td>227kb</td></tr>
+
+
+			<tr><td><a href='./enums_files/pasted_image016.png'>pasted_image016.png</a></td><td>&nbsp;</td><td>75.7kb</td></tr>
 
 			</table>
 	</div>
